# personal-ai

./: .env.example  .gitignore  README.md  pyproject.toml  task.md
src/personal_ai/: __init__.py  agent.py  log_utils.py  main.py  metrics.py  session.py  tools.py  workspace.py
workspace/: AGENT.md  user_memory.yaml
workspace/metrics/: session_2026-02-23T03-57-56.json  session_2026-02-23T03-59-39.json  session_2026-02-23T04-09-58.json  session_2026-02-23T04-22-06.json  total.json
